# collector-airflow

./: .gitignore  Makefile  README.md  collector.py  config.json  config.py  docker-compose.yml  poetry.toml  pyproject.toml  requirements.txt
dags/: dag_reddit.py
src/: main.py  utils.py
src/config/: __init__.py  config.json  config.py
src/dags/: dag_reddit.py
src/modules/: collector.py  untils.py
src/modules/register/: __init__.py  register.py
