[tool.poetry]
name = "reddit-collector"
version = "0.1.0"
description = "Data collector from Reddit."
authors = ["jordaoa <andrejordao50@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.0.0"
praw = "7.7.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
